--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
 h1 {color:rgb(255, 38, 92);}
 body {background-color:rgb(255, 170, 213);}
+div {background-color: rgb(243, 192, 218);}
 li {font-weight:bold;}
